--- a/shared/styles-scss/index.scss
+++ b/shared/styles-scss/index.scss
@@ -1,21 +1,21 @@
-@import "./shared/clear.scss";
-@import "./shared/scroll-bar.scss";
-@import "./shared/font-cfg.scss";
-@import "./shared/section.scss";
-@import "./shared/picker-frame.scss";
-@import "./shared/sample-code.scss";
-@import "./shared/feature-usage-shower.scss";
-@import "./shared/character-variant-picker.scss";
-@import "./page-parts/banner.scss";
-@import "./page-parts/ligation-sampler.scss";
-@import "./page-parts/character-variants-sampler.scss";
-@import "./page-parts/code-sampler.scss";
-@import "./page-parts/footer.scss";
-@import "./page-parts/width-sampler.scss";
-@import "./page-parts/grand-intro.scss";
-@import "./page-parts/stat-dashboard.scss";
-@import "./page-parts/terminal-sampler.scss";
-@import "./page-parts/supported-languages-list.scss";
-@import "./page-parts/proportional-sampler.scss";
-@import "./pages/character-specimen.scss";
-@import "./pages/customizer.scss";
+@use "shared/clear.scss";
+@use "shared/scroll-bar.scss";
+@use "shared/font-cfg.scss";
+@use "shared/section.scss";
+@use "shared/picker-frame.scss";
+@use "shared/sample-code.scss";
+@use "shared/feature-usage-shower.scss";
+@use "shared/character-variant-picker.scss";
+@use "page-parts/banner.scss";
+@use "page-parts/ligation-sampler.scss";
+@use "page-parts/character-variants-sampler.scss";
+@use "page-parts/code-sampler.scss";
+@use "page-parts/footer.scss";
+@use "page-parts/width-sampler.scss";
+@use "page-parts/grand-intro.scss";
+@use "page-parts/stat-dashboard.scss";
+@use "page-parts/terminal-sampler.scss";
+@use "page-parts/supported-languages-list.scss";
+@use "page-parts/proportional-sampler.scss";
+@use "pages/character-specimen.scss";
+@use "pages/customizer.scss";
