--- a/shared/styles-scss/page-parts/banner.scss
+++ b/shared/styles-scss/page-parts/banner.scss
@@ -1,9 +1,9 @@
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
 
 $bannerStatHeight: 3.5rem;
 $bannerStatPadding: 0.5rem;
-$bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
+$bannerNarrowLimit: metrics.sectionTotalWidthChars(14, 6rem);
 .banner {
 	height: 100vh;
 	position: relative;
@@ -14,7 +14,7 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 	white-space: nowrap;
 	font-weight: 100;
 	font-size: 12rem;
-	color: $light2;
+	color: chroma.$light2;
 	position: absolute;
 	top: 50%;
 	left: 0;
@@ -22,10 +22,10 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 	height: 1em;
 	line-height: 1em;
 	margin: -12rem 0 0 0;
-	@include AutoFontSize(12, 8rem);
-	@include AutoFontSize(12, 6rem);
-	@include AutoFontSize(12, 4rem);
-	@include AutoFontSize(12, 2rem);
+	@include metrics.AutoFontSize(12, 8rem);
+	@include metrics.AutoFontSize(12, 6rem);
+	@include metrics.AutoFontSize(12, 4rem);
+	@include metrics.AutoFontSize(12, 2rem);
 
 	@media (max-width: $bannerNarrowLimit) {
 		margin-top: -12rem;
@@ -48,7 +48,7 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 		padding-top: $bannerStatPadding;
 		padding-bottom: $bannerStatPadding;
 		> .quantity {
-			color: $light4;
+			color: chroma.$light4;
 			font-weight: 200;
 			font-size: 1.5em;
 			line-height: 1em;
@@ -61,7 +61,7 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 	> .stat + .stat {
 		margin-left: 1rem;
 		padding-left: 1rem;
-		border-left: 1px solid $dark3;
+		border-left: 1px solid chroma.$dark3;
 	}
 	> .main-button {
 		font-weight: 500;
@@ -80,14 +80,14 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 		}
 	}
 	> .install-button {
-		color: $light2;
+		color: chroma.$light2;
 		text-decoration: none;
 		border-width: 0.125em;
 		border-style: solid;
 		border-image-slice: 1;
-		border-image-source: linear-gradient(-45deg, $cyan1, $azure1);
+		border-image-source: linear-gradient(-45deg, chroma.$cyan1, chroma.$azure1);
 		&:hover {
-			@include control-hover();
+			@include chroma.control-hover();
 		}
 	}
 	> .install-button-split {
@@ -96,7 +96,7 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 		flex-direction: column;
 		> .sub-button {
 			line-height: 1;
-			color: $light2;
+			color: chroma.$light2;
 			display: flex;
 			flex: 1;
 			box-sizing: border-box;
@@ -109,7 +109,7 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 				font-weight: 400;
 				font-size: 0.8em;
 				vertical-align: 1 / 20 em;
-				@include thin-underline(0.95em, $dark1, $light1);
+				@include chroma.thin-underline(0.95em, chroma.$dark1, chroma.$light1);
 			}
 		}
 	}
@@ -144,8 +144,8 @@ $bannerNarrowLimit: sectionTotalWidthChars(14, 6rem);
 		display: block;
 		width: 1.5rem;
 		height: 1.5rem;
-		border-bottom: 2px solid $azure1;
-		border-right: 2px solid $azure1;
+		border-bottom: 2px solid chroma.$azure1;
+		border-right: 2px solid chroma.$azure1;
 		transform: rotate(45deg);
 		margin: -15px;
 		animation: banner-scroll-down-arrow-animation 4s infinite;
