--- a/shared/styles-scss/page-parts/character-variants-sampler.scss
+++ b/shared/styles-scss/page-parts/character-variants-sampler.scss
@@ -1,13 +1,13 @@
 @use "sass:math";
 
-@import "../shared/chroma.scss";
-@import "../shared/switch-button.scss";
-@import "../shared/sampler-panel.scss";
-@import "../shared/metrics.scss";
-@import "../shared/tools-panels-t.scss";
+@use "../shared/chroma.scss";
+@use "../shared/switch-button.scss";
+@use "../shared/sampler-panel.scss";
+@use "../shared/metrics.scss";
+@use "../shared/tools-panels-t.scss";
 
 .character-variant-sampler-body {
-	@media (max-width: sectionTotalWidthChars(64, 1rem)) {
+	@media (max-width: metrics.sectionTotalWidthChars(64, 1rem)) {
 		display: none;
 	}
 	.picker-frame > .sample-code {
@@ -31,12 +31,12 @@
 			flex-grow: none;
 			height: 3.125em;
 			padding: 0.25em;
-			@include block-switch-button();
+			@include switch-button.block-switch-button();
 			&.default {
 				margin-right: calc(100% / 3 * 2);
 			}
 		}
-		@media (max-width: sectionTotalWidthChars(96, 1rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(96, 1rem)) {
 			.option {
 				width: calc(100% / 2 - 0.5em);
 			}
