--- a/shared/styles-scss/page-parts/footer.scss
+++ b/shared/styles-scss/page-parts/footer.scss
@@ -1,8 +1,8 @@
-@import "../shared/chroma.scss";
+@use "../shared/chroma.scss";
 
 div.footer {
 	font-size: 70%;
 	padding: 1rem 0;
 	text-align: center;
-	color: $dark4;
+	color: chroma.$dark4;
 }
