--- a/shared/styles-scss/page-parts/grand-intro.scss
+++ b/shared/styles-scss/page-parts/grand-intro.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
 
 .grand-intro {
 	padding-top: 0;
@@ -15,19 +15,19 @@
 	line-height: 1.66667;
 	font-size: 3.2rem;
 	font-weight: 200;
-	@include gradient-text-bg($accent1, $azure1);
-	@include AutoFontSize(48, 2.4rem);
-	@include AutoFontSize(48, 2rem);
-	@include AutoFontSize(48, 1.6rem);
-	@include AutoFontSize(48, 1.2rem);
-	@include AutoFontSize(48, 0.8rem);
+	@include chroma.gradient-text-bg(chroma.$accent1, chroma.$azure1);
+	@include metrics.AutoFontSize(48, 2.4rem);
+	@include metrics.AutoFontSize(48, 2rem);
+	@include metrics.AutoFontSize(48, 1.6rem);
+	@include metrics.AutoFontSize(48, 1.2rem);
+	@include metrics.AutoFontSize(48, 0.8rem);
 
 	strong,
 	em {
 		font-weight: 300;
 		font-style: normal;
 		white-space: nowrap;
-		@include gradient-text-enable();
+		@include chroma.gradient-text-enable();
 	}
 }
 
@@ -41,26 +41,27 @@
 	margin: math.div(8em, 2.4) 0;
 	font-size: 2.4rem;
 
-	@include AutoFontSize(48, 2.4rem, math.div(2.4, 3.2));
-	@include AutoFontSize(48, 2rem, math.div(2.4, 3.2));
-	@include AutoFontSize(48, 1.6rem, math.div(2.4, 3.2));
-	@include AutoFontSize(48, 1.2rem, math.div(2.4, 3.2));
+	@include metrics.AutoFontSize(48, 2.4rem, math.div(2.4, 3.2));
+	@include metrics.AutoFontSize(48, 2rem, math.div(2.4, 3.2));
+	@include metrics.AutoFontSize(48, 1.6rem, math.div(2.4, 3.2));
+	@include metrics.AutoFontSize(48, 1.2rem, math.div(2.4, 3.2));
 
 	.family-item {
 		position: relative;
 		display: flex;
-		@include gradient-text-bg($accent1, $azure1);
+		@include chroma.gradient-text-bg(chroma.$accent1, chroma.$azure1);
 		align-items: flex-start;
 		padding-top: $itemPadding;
+
 		.spacing-type {
 			position: absolute;
 			font-size: 0.8rem;
-			@include AutoFontSize(48, 0.8rem);
 			font-stretch: expanded;
 			font-weight: 300;
 			text-transform: uppercase;
 			top: math.div(0.8em, 2.4 * 0.8);
 			left: 0;
+			@include metrics.AutoFontSize(48, 0.8rem);
 		}
 		.family-name,
 		.stat {
@@ -72,14 +73,14 @@
 			padding: 0;
 		}
 		.family-name {
-			color: $light2;
+			color: chroma.$light2;
 			flex: 3;
 		}
 		.stat {
 			flex: none;
 			width: $numberColumnWidth;
 
-			@media (max-width: sectionTotalWidthChars(36, 1.6rem)) {
+			@media (max-width: metrics.sectionTotalWidthChars(36, 1.6rem)) {
 				display: none;
 			}
 			&.static {
@@ -92,7 +93,7 @@
 			}
 		}
 		.stat.dynamic .quantity {
-			@include gradient-text-enable();
+			@include chroma.gradient-text-enable();
 		}
 		.stat.static .quantity {
 			text-align: center;
@@ -119,7 +120,7 @@
 					content: "";
 					display: block;
 					position: absolute;
-					border-left: 1px solid $dark4;
+					border-left: 1px solid chroma.$dark4;
 					top: -1.5rem;
 					height: 1rem;
 					left: 0.4rem;
