--- a/shared/styles-scss/page-parts/ligation-sampler.scss
+++ b/shared/styles-scss/page-parts/ligation-sampler.scss
@@ -1,11 +1,12 @@
-@import "../shared/chroma.scss";
-@import "../shared/switch-button.scss";
-@import "../shared/sampler-panel.scss";
-@import "../shared/metrics.scss";
-@import "../shared/tools-panels-t.scss";
+@use "sass:color";
+@use "../shared/chroma.scss";
+@use "../shared/switch-button.scss";
+@use "../shared/sampler-panel.scss";
+@use "../shared/metrics.scss";
+@use "../shared/tools-panels-t.scss";
 
 .ligation-sampler-body {
-	@media (max-width: sectionTotalWidthChars(64, 1rem)) {
+	@media (max-width: metrics.sectionTotalWidthChars(64, 1rem)) {
 		display: none;
 	}
 	.panel {
@@ -28,7 +29,7 @@
 				flex-grow: 0;
 				flex-shrink: 0;
 				width: 16.667%;
-				@include block-switch-button();
+				@include switch-button.block-switch-button();
 				&.off > .tag {
 					text-decoration: line-through;
 					text-decoration-thickness: 0.05em;
@@ -37,15 +38,15 @@
 		}
 	}
 	> .picker-frame {
-		@include sampler-panel-right();
+		@include sampler-panel.sampler-panel-right();
 
-		@media (max-width: sectionTotalWidthChars(70, 1rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(70, 1rem)) {
 			.button-group.weight {
 				display: none;
 			}
 		}
 
-		@media (max-width: sectionTotalWidthChars(48, 1rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(48, 1rem)) {
 			.button-group.slope {
 				display: none;
 			}
@@ -58,11 +59,11 @@
 		width: 0;
 		font-size: 1.8rem;
 		.rank-0 {
-			color: mix($light1, $dark1, 25%);
+			color: color.mix(chroma.$light1, chroma.$dark1, 25%);
 		}
 		.rank-2,
 		.rank-3 {
-			color: $accent1;
+			color: chroma.$accent1;
 		}
 	}
 }
