--- a/shared/styles-scss/page-parts/proportional-sampler.scss
+++ b/shared/styles-scss/page-parts/proportional-sampler.scss
@@ -1,12 +1,12 @@
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
 
 .proportional-sampler-body {
-	@media (max-width: sectionTotalWidthChars(48, 1rem)) {
+	@media (max-width: metrics.sectionTotalWidthChars(48, 1rem)) {
 		display: none;
 	}
 	.picker-frame {
-		@media (max-width: sectionTotalWidthChars(60, 1rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(60, 1rem)) {
 			.button-group.weight,
 			.button-group.slope {
 				display: none;
