--- a/shared/styles-scss/page-parts/stat-dashboard.scss
+++ b/shared/styles-scss/page-parts/stat-dashboard.scss
@@ -1,13 +1,13 @@
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
 
-$statDualColWidth: sectionTotalWidthChars(12, 4rem);
+$statDualColWidth: metrics.sectionTotalWidthChars(12, 4rem);
 .stat-dashboard {
 	display: flex;
 	overflow: hidden;
 	flex-wrap: wrap;
 	margin: 0;
-	@include gradient-text-bg($accent1, $azure1);
+	@include chroma.gradient-text-bg(chroma.$accent1, chroma.$azure1);
 	> .stat {
 		flex: 1 0 25%;
 		padding: 0 2rem;
@@ -20,7 +20,7 @@ $statDualColWidth: sectionTotalWidthChars(12, 4rem);
 		.quantity {
 			font-size: 4rem;
 			font-weight: 200;
-			@include gradient-text-enable();
+			@include chroma.gradient-text-enable();
 
 			@media (max-width: $statDualColWidth) {
 				font-size: 2rem;
