--- a/shared/styles-scss/page-parts/terminal-sampler.scss
+++ b/shared/styles-scss/page-parts/terminal-sampler.scss
@@ -1,5 +1,5 @@
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
 
 .terminal-sampler {
 	.sample-item h3 {
@@ -9,25 +9,25 @@
 		font-size: 1rem;
 	}
 	.sample-body {
-		@include gradient-text-bg($accent1, $azure1);
+		@include chroma.gradient-text-bg(chroma.$accent1, chroma.$azure1);
 		font-size: 3rem;
 		margin: 0 0 3rem 0;
 
-		@media (max-width: sectionTotalWidthChars(48, 2.4rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(48, 2.4rem)) {
 			font-size: 2.4rem;
 		}
 
-		@media (max-width: sectionTotalWidthChars(48, 2rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(48, 2rem)) {
 			font-size: 2rem;
 		}
 
-		@media (max-width: sectionTotalWidthChars(48, 1.6rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(48, 1.6rem)) {
 			font-size: 1.6rem;
 		}
 
 		em {
 			font-style: normal;
-			@include gradient-text-enable();
+			@include chroma.gradient-text-enable();
 		}
 	}
 }
