--- a/shared/styles-scss/page-parts/width-sampler.scss
+++ b/shared/styles-scss/page-parts/width-sampler.scss
@@ -1,12 +1,13 @@
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
+@use "sass:color";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
 
 .width-sampler {
 	.sample-text {
 		overflow: hidden;
 		font-size: 0.8rem;
 		line-height: 1.06rem;
-		border: 1px solid $dark2;
+		border: 1px solid chroma.$dark2;
 		margin: 0;
 		padding: 1em;
 		position: relative;
@@ -18,14 +19,14 @@
 			top: 0;
 			bottom: 0;
 			width: 2rem;
-			background: linear-gradient(to left, $dark1, change-color($dark1, $alpha: 0));
+			background: linear-gradient(to left, chroma.$dark1, color.change(chroma.$dark1, $alpha: 0));
 		}
 	}
 	> .picker-frame > .toolbar.separate-toolbar {
 		line-height: 2.5rem;
 		height: 2.5rem;
 
-		@media (max-width: sectionTotalWidthChars(36, 2.4rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars(36, 2.4rem)) {
 			display: none;
 		}
 		.section-inner .button-group .picker-button {
