--- a/shared/styles-scss/pages/character-specimen.scss
+++ b/shared/styles-scss/pages/character-specimen.scss
@@ -1,17 +1,19 @@
 @use "sass:math";
 
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
-@import "../shared/picker-frame.scss";
+@use "sass:color";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
+@use "../shared/picker-frame.scss";
+@use "../shared/font-cfg";
 
 #character-specimen {
-	min-width: $sectionWidth;
+	min-width: metrics.$sectionWidth;
 	padding-left: 4rem;
 	padding-right: 4rem;
 
 	.section-toolbar {
 		position: fixed;
-		background: $dark1;
+		background: chroma.$dark1;
 		z-index: 10;
 	}
 
@@ -24,24 +26,24 @@
 
 	#navigator-panel {
 		position: fixed;
-		right: calc(50vw - (0.5 * $sectionWidth + 0.25rem));
+		right: calc(50vw - (0.5 * metrics.$sectionWidth + 0.25rem));
 		top: 0;
 		z-index: 20;
 
 		> .button {
 			line-height: 2rem;
 			padding: 0 0.25rem;
-			@include picker-button-visual();
+			@include picker-frame.picker-button-visual();
 		}
 		> .navigation-dropdown {
 			display: none;
-			background: $dark2;
+			background: chroma.$dark2;
 			position: absolute;
 			right: 0;
 			top: 2rem;
 			padding: 0.25em;
 
-			@include add-backdrop;
+			@include chroma.add-backdrop;
 
 			> .blocks-panel {
 				width: 26rem;
@@ -61,7 +63,7 @@
 					cursor: pointer;
 
 					&.hovered {
-						background: $dark4;
+						background: chroma.$dark4;
 					}
 				}
 			}
@@ -71,7 +73,7 @@
 				padding-left: 0.5em;
 				padding-right: 1px;
 				padding-bottom: 1px;
-				border-left: 1px solid $control-border;
+				border-left: 1px solid chroma.$control-border;
 				width: (24 * 0.625rem);
 				max-height: 90vh;
 				overflow-y: auto;
@@ -94,14 +96,14 @@
 					}
 
 					> .columns > .strip {
-						@include fc-sans();
+						@include font-cfg.fc-sans();
 						flex: none;
 						display: flex;
 						height: 1.25em;
 
 						&.filled {
 							cursor: pointer;
-							background: $dark3;
+							background: chroma.$dark3;
 						}
 						> span {
 							position: relative;
@@ -112,8 +114,8 @@
 						}
 						&.filled.hovered {
 							position: relative;
-							background: $dark4;
-							outline: 1px solid $accent1;
+							background: chroma.$dark4;
+							outline: 1px solid chroma.$accent1;
 
 							&::after {
 								content: " ";
@@ -122,12 +124,12 @@
 								left: 0;
 								right: 0;
 								bottom: 0;
-								background: $dark4;
+								background: chroma.$dark4;
 								z-index: 1;
 							}
 						}
 						&.filled > span:hover {
-							background: transparentize($color: $light1, $amount: 0.8);
+							background: color.adjust($color: chroma.$light1, $alpha: -0.8);
 						}
 					}
 				}
@@ -135,9 +137,9 @@
 		}
 		&.dropdown-visible {
 			> .button {
-				background: $dark2;
-				color: $light2;
-				@include add-backdrop;
+				background: chroma.$dark2;
+				color: chroma.$light2;
+				@include chroma.add-backdrop;
 			}
 			> .navigation-dropdown {
 				display: flex;
@@ -161,7 +163,7 @@
 		}
 		.background {
 			display: inline-block;
-			color: $azure1;
+			color: chroma.$azure1;
 			width: 0;
 			position: relative;
 			user-select: none;
@@ -260,7 +262,7 @@
 				}
 				&:hover {
 					.character-sample {
-						@include control-hover();
+						@include chroma.control-hover();
 					}
 					.has-variant-marker {
 						right: 2px;
@@ -269,11 +271,11 @@
 					}
 				}
 				&.variant-menu-visible {
-					@include control-active-no-hover();
+					@include chroma.control-active-no-hover();
 					.character-sample {
-						@include control-active();
+						@include chroma.control-active();
 						.background {
-							color: mix($accent1, $dark1, 50%);
+							color: color.mix(chroma.$accent1, chroma.$dark1, 50%);
 						}
 					}
 					.character-sample-variants {
@@ -281,8 +283,8 @@
 					}
 					.has-variant-marker {
 						opacity: 1;
-						border-right-color: $dark1;
-						border-bottom-color: $dark1;
+						border-right-color: chroma.$dark1;
+						border-bottom-color: chroma.$dark1;
 						right: 2px;
 						bottom: 2px;
 						border-width: 3px;
@@ -295,7 +297,7 @@
 					bottom: 0;
 					width: 0;
 					height: 0;
-					border: 5px solid $light1;
+					border: 5px solid chroma.$light1;
 					border-left-color: transparent;
 					border-top-color: transparent;
 					opacity: 0.25;
@@ -311,7 +313,7 @@
 					position: absolute;
 					top: 100%;
 					left: 0;
-					background: $light1;
+					background: chroma.$light1;
 					z-index: 3;
 					padding: 0.25rem;
 					> .group {
@@ -320,7 +322,7 @@
 						> .group-name {
 							font-size: 0.625em;
 							font-weight: 600;
-							background: transparentize($color: $dark1, $amount: 0.9);
+							background: color.adjust($color: chroma.$dark1, $alpha: -0.9);
 							margin: 0.2em 0;
 							padding: 0 0.2em;
 						}
@@ -338,7 +340,7 @@
 								height: 2rem;
 								width: 2rem;
 								&.current-selection {
-									background: transparentize($color: $dark1, $amount: 0.85);
+									background: color.adjust($color: chroma.$dark1, $alpha: -0.85);
 								}
 							}
 						}
@@ -356,13 +358,13 @@
 		padding: 0rem 0.5rem;
 		overflow: auto;
 		z-index: 3;
-		background: $dark1;
+		background: chroma.$dark1;
 		display: flex;
 		flex-wrap: wrap;
-		border-top: 1px solid change-color($light1, $alpha: 0.25);
-		border-left: 1px solid change-color($light1, $alpha: 0.25);
-		border-right: 1px solid change-color($light1, $alpha: 0.25);
-		box-shadow: 0 0 0.25em $dark1;
+		border-top: 1px solid color.change(chroma.$light1, $alpha: 0.25);
+		border-left: 1px solid color.change(chroma.$light1, $alpha: 0.25);
+		border-right: 1px solid color.change(chroma.$light1, $alpha: 0.25);
+		box-shadow: 0 0 0.25em chroma.$dark1;
 		border-top-left-radius: 0.25rem;
 		border-top-right-radius: 0.25rem;
 		> .standout {
@@ -371,7 +373,7 @@
 			height: 15rem;
 			flex: none;
 			position: relative;
-			background: $dark1;
+			background: chroma.$dark1;
 			> button.close {
 				display: block;
 				z-index: 1;
@@ -384,10 +386,10 @@
 				left: 0.25rem;
 				text-align: center;
 				border: none;
-				background: $dark1;
-				color: $light1;
+				background: chroma.$dark1;
+				color: chroma.$light1;
 				&:hover {
-					@include control-hover();
+					@include chroma.control-hover();
 				}
 			}
 			> h4 {
