--- a/shared/styles-scss/pages/customizer.scss
+++ b/shared/styles-scss/pages/customizer.scss
@@ -1,16 +1,18 @@
 @use "sass:math";
 
-@import "../shared/chroma.scss";
-@import "../shared/metrics.scss";
-@import "../shared/font-cfg.scss";
-@import "../shared/forms.scss";
+@use "sass:color";
+@use "../shared/chroma.scss";
+@use "../shared/metrics.scss";
+@use "../shared/font-cfg.scss";
+@use "../shared/forms.scss";
+@use "../shared/character-variant-picker";
 
 $formItemHeight: 2.25em;
 $mwDualCol: 102;
 
 .customizer {
-	@media (max-width: sectionTotalWidthChars($mwDualCol, 1rem)) {
-		min-width: 0.6 * $sectionWidth;
+	@media (max-width: metrics.sectionTotalWidthChars($mwDualCol, 1rem)) {
+		min-width: 0.6 * metrics.$sectionWidth;
 	}
 
 	> .section-inner {
@@ -18,16 +20,16 @@ $mwDualCol: 102;
 		margin: 0;
 		display: flex;
 
-		@media (max-width: sectionTotalWidthChars($mwDualCol, 1rem)) {
+		@media (max-width: metrics.sectionTotalWidthChars($mwDualCol, 1rem)) {
 			display: block;
 		}
 
 		> .config-panel {
 			flex: none;
-			width: 0.4 * $sectionWidth;
-			margin-left: calc((100vw - #{2 * $sectionHPadding} - #{$sectionWidth}) / 2);
+			width: 0.4 * metrics.$sectionWidth;
+			margin-left: calc((100vw - #{2 * metrics.$sectionHPadding} - #{metrics.$sectionWidth}) / 2);
 
-			@media (max-width: sectionTotalWidthChars($mwDualCol, 1rem)) {
+			@media (max-width: metrics.sectionTotalWidthChars($mwDualCol, 1rem)) {
 				width: auto;
 				margin-left: 0;
 			}
@@ -35,9 +37,9 @@ $mwDualCol: 102;
 
 		> .config-co-panel {
 			padding-top: 2rem * (1.375 + 1);
-			width: 0.6 * $sectionWidth;
+			width: 0.6 * metrics.$sectionWidth;
 
-			@media (max-width: sectionTotalWidthChars($mwDualCol, 1rem)) {
+			@media (max-width: metrics.sectionTotalWidthChars($mwDualCol, 1rem)) {
 				width: auto;
 				margin-left: 0;
 			}
@@ -45,22 +47,22 @@ $mwDualCol: 102;
 
 		> .result-panel,
 		> .style-matcher-panel {
-			width: $sectionWidth;
-			margin-left: calc((100vw - #{2 * $sectionHPadding} - #{$sectionWidth}) / 2);
+			width: metrics.$sectionWidth;
+			margin-left: calc((100vw - #{2 * metrics.$sectionHPadding} - #{metrics.$sectionWidth}) / 2);
 
-			@media (max-width: sectionTotalWidthChars($mwDualCol, 1rem)) {
+			@media (max-width: metrics.sectionTotalWidthChars($mwDualCol, 1rem)) {
 				margin: 0;
 				width: auto;
 			}
 		}
 
 		> .preview-panel {
-			border-left: 1px solid change-color($light1, $alpha: 0.25);
-			margin-top: -$sectionPadding;
-			margin-bottom: -$sectionPadding;
-			margin-left: math.div($sectionPadding, 2);
+			border-left: 1px solid color.change(chroma.$light1, $alpha: 0.25);
+			margin-top: -(metrics.$sectionPadding);
+			margin-bottom: -(metrics.$sectionPadding);
+			margin-left: math.div(metrics.$sectionPadding, 2);
 
-			@media (max-width: sectionTotalWidthChars($mwDualCol, 1rem)) {
+			@media (max-width: metrics.sectionTotalWidthChars($mwDualCol, 1rem)) {
 				display: none;
 			}
 
@@ -68,8 +70,8 @@ $mwDualCol: 102;
 				position: sticky;
 				top: 0;
 				left: 0;
-				padding: $sectionPadding $sectionHPadding $sectionPadding
-					math.div($sectionPadding, 2);
+				padding: metrics.$sectionPadding metrics.$sectionHPadding metrics.$sectionPadding
+					math.div(metrics.$sectionPadding, 2);
 			}
 		}
 	}
@@ -87,11 +89,11 @@ $mwDualCol: 102;
 		font-stretch: expanded;
 		margin: 0 0 1em 0;
 		position: relative;
-		@include gradient-text-bg($accent1, $azure1);
+		@include chroma.gradient-text-bg(chroma.$accent1, chroma.$azure1);
 
 		> em {
 			font-style: normal;
-			@include gradient-text-enable();
+			@include chroma.gradient-text-enable();
 		}
 	}
 
@@ -102,11 +104,11 @@ $mwDualCol: 102;
 		line-height: 1.75;
 
 		a {
-			color: $light2;
-			@include thin-underline(1.1em, $light1, $accent1);
+			color: chroma.$light2;
+			@include chroma.thin-underline(1.1em, chroma.$light1, chroma.$accent1);
 
 			&:hover {
-				color: $accent1;
+				color: chroma.$accent1;
 			}
 		}
 	}
@@ -181,16 +183,16 @@ $mwDualCol: 102;
 
 	.custom-config-source,
 	.custom-build-commands > dd {
-		color: $azure1;
+		color: chroma.$azure1;
 		white-space: pre;
-		border: 1px solid change-color($light1, $alpha: 0.1);
+		border: 1px solid color.change(chroma.$light1, $alpha: 0.1);
 		padding: 1em;
 		margin: 1em;
 	}
 
 	.custom-build-commands a {
-		color: $light2;
-		@include thin-underline(1.1em, $light1, $accent1);
+		color: chroma.$light2;
+		@include chroma.thin-underline(1.1em, chroma.$light1, chroma.$accent1);
 	}
 }
 
@@ -221,7 +223,7 @@ $mwDualCol: 102;
 		transition:
 			transform 0.25s,
 			border-color 0.25s;
-		background: $dark1;
+		background: chroma.$dark1;
 		cursor: crosshair;
 
 		&:hover {
@@ -229,7 +231,7 @@ $mwDualCol: 102;
 			transform: scale(2);
 			z-index: 1;
 			box-shadow: 0 0 0.25em dark1;
-			border-color: change-color($light1, $alpha: 0.25);
+			border-color: color.change(chroma.$light1, $alpha: 0.25);
 		}
 	}
 
@@ -256,7 +258,7 @@ $mwDualCol: 102;
 			flex: 7;
 			margin: 0;
 			font-size: 0.75em;
-			text-shadow: 0 0 1px $dark1;
+			text-shadow: 0 0 1px chroma.$dark1;
 
 			&.wd-600 {
 				font-size: math.div(0.75em, 1.2);
@@ -266,7 +268,7 @@ $mwDualCol: 102;
 		&.ignore-highlight > pre {
 			.token.dim,
 			.highlight {
-				color: $light2;
+				color: chroma.$light2;
 			}
 		}
 
@@ -283,8 +285,8 @@ $mwDualCol: 102;
 				position: relative;
 				z-index: 1;
 				transform: scale(3);
-				background: $dark1;
-				border: 0.333px solid change-color($light1, $alpha: 0.25);
+				background: chroma.$dark1;
+				border: 0.333px solid color.change(chroma.$light1, $alpha: 0.25);
 				padding: 0.25em 0.5em;
 				margin: calc(-0.333px - 0.25em) calc(-0.333px - 0.5em);
 			}
@@ -297,25 +299,25 @@ $mwDualCol: 102;
 		font-size: 2em;
 	}
 
-	@media (max-width: sectionTotalWidthChars(92, 1rem)) {
+	@media (max-width: metrics.sectionTotalWidthChars(92, 1rem)) {
 		.sample-text {
 			font-size: 1.5em;
 		}
 	}
 
-	@media (max-width: sectionTotalWidthChars(76, 1rem)) {
+	@media (max-width: metrics.sectionTotalWidthChars(76, 1rem)) {
 		.sample-text {
 			font-size: 1.25em;
 		}
 	}
 
 	.rank-0 {
-		color: mix($light1, $dark1, 25%);
+		color: color.mix(chroma.$light1, chroma.$dark1, 25%);
 	}
 
 	.rank-2,
 	.rank-3 {
-		color: $accent1;
+		color: chroma.$accent1;
 	}
 }
 
@@ -326,7 +328,7 @@ $mwDualCol: 102;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background: transparentize($color: $dark1, $amount: 0.125);
+	background: color.adjust($color: chroma.$dark1, $alpha: -0.125);
 	backdrop-filter: blur(0.5rem);
 }
 .customizer.popup {
@@ -336,8 +338,8 @@ $mwDualCol: 102;
 	bottom: 25%;
 	left: 25%;
 	right: 25%;
-	background: $dark1;
-	border: 1px solid change-color($light1, $alpha: 0.25);
+	background: chroma.$dark1;
+	border: 1px solid color.change(chroma.$light1, $alpha: 0.25);
 	padding: 1rem;
 
 	> h2 {
@@ -372,17 +374,17 @@ $mwDualCol: 102;
 	> .cv-item {
 		display: block;
 		flex: 0;
-		width: 2 * $smallOptionSize;
-		border: 1px solid $dark3;
+		width: 2 * character-variant-picker.$smallOptionSize;
+		border: 1px solid chroma.$dark3;
 		padding: 0.25rem;
 		margin: 0.25rem;
 
 		> .target-sample {
 			font-size: 2rem;
-			height: 2 * $smallOptionSize;
-			line-height: 2 * $smallOptionSize;
+			height: 2 * character-variant-picker.$smallOptionSize;
+			line-height: 2 * character-variant-picker.$smallOptionSize;
 			text-align: center;
-			border-bottom: 1px solid $dark3;
+			border-bottom: 1px solid chroma.$dark3;
 			overflow: hidden;
 		}
 	}
