--- a/shared/styles-scss/shared/chroma.scss
+++ b/shared/styles-scss/shared/chroma.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 $dark1: #101414;
 $dark2: #212525;
 $dark3: #333737;
@@ -13,7 +14,7 @@ $green1: #4db073;
 $cyan1: #56dcee;
 $accent1: #75f4ff;
 
-$control-border: change-color($light1, $alpha: 0.25);
+$control-border: color.change($light1, $alpha: 0.25);
 $control-border-hover: $light1;
 $control-border-focus: $accent1;
 $control-mark: $accent1;
@@ -48,7 +49,7 @@ $control-mark: $accent1;
 }
 
 @mixin control-hover() {
-	background: change-color($light1, $alpha: 0.15);
+	background: color.change($light1, $alpha: 0.15);
 }
 
 @mixin control-active-no-hover() {
@@ -60,7 +61,7 @@ $control-mark: $accent1;
 	background: $light1;
 	color: $dark1;
 	&:hover {
-		background: mix($dark1, $light1, 15%);
+		background: color.mix($dark1, $light1, 15%);
 	}
 }
 
