--- a/shared/styles-scss/shared/clear.scss
+++ b/shared/styles-scss/shared/clear.scss
@@ -1,10 +1,10 @@
-@import "./chroma.scss";
-@import "./font-cfg.scss";
+@use "chroma.scss";
+@use "font-cfg.scss";
 
 body {
-	@include fc-sans();
-	background: $dark1;
-	color: $light1;
+	@include font-cfg.fc-sans();
+	background: chroma.$dark1;
+	color: chroma.$light1;
 }
 
 html,
@@ -17,5 +17,5 @@ body {
 
 pre,
 code {
-	@include fc-sans();
+	@include font-cfg.fc-sans();
 }
