--- a/shared/styles-scss/shared/feature-usage-shower.scss
+++ b/shared/styles-scss/shared/feature-usage-shower.scss
@@ -1,6 +1,6 @@
-@import "./chroma.scss";
+@use "chroma.scss";
 .feature-usage-shower {
-	border: 1px solid $dark3;
+	border: 1px solid chroma.$dark3;
 	margin: 1.5rem 0 0.5rem 0;
 	padding: 0.5rem;
 
@@ -10,7 +10,7 @@
 		font-stretch: expanded;
 		margin: 0;
 		text-transform: uppercase;
-		background: $dark1;
+		background: chroma.$dark1;
 		margin-top: -1rem;
 		padding: 0 0.5em;
 		width: 14em;
