--- a/shared/styles-scss/shared/forms.scss
+++ b/shared/styles-scss/shared/forms.scss
@@ -1,23 +1,25 @@
 @use "sass:math";
 
-@import "./chroma.scss";
-@import "./metrics.scss";
-@import "./font-cfg.scss";
+@use "chroma.scss";
+@use "metrics.scss";
+@use "font-cfg.scss";
 
 @mixin form-common() {
-	@include fc-sans();
+	& {
+		@include font-cfg.fc-sans();
+	}
 	display: block;
 	font-size: 100%;
 	font-stretch: expanded;
 
 	background: none;
-	color: $light2;
+	color: chroma.$light2;
 
 	box-sizing: border-box;
 	width: 100%;
 	height: 2.25em;
 	padding: 0 0.25em;
-	border: 1px solid $control-border;
+	border: 1px solid chroma.$control-border;
 	transition:
 		border-color 0.25s,
 		background-color 0.25s;
@@ -40,17 +42,18 @@ input[type="text"] {
 	border-right-color: transparent;
 
 	&:hover {
-		border-bottom-color: $light1;
+		border-bottom-color: chroma.$light1;
 	}
 
 	&:focus {
 		outline: none;
-		border-bottom-color: $control-border-focus;
+		border-bottom-color: chroma.$control-border-focus;
 	}
 }
 
 @mixin select-arrow-bg($line-color, $arrow-color) {
-	background-image: linear-gradient(45deg, transparent 50%, $arrow-color 50%),
+	background-image:
+		linear-gradient(45deg, transparent 50%, $arrow-color 50%),
 		linear-gradient(135deg, $arrow-color 50%, transparent 50%),
 		linear-gradient(to right, $line-color, $line-color);
 	background-position:
@@ -68,32 +71,32 @@ select {
 	appearance: none;
 	padding-right: 2.25em;
 
-	@include select-arrow-bg($control-border, $light1);
+	@include select-arrow-bg(chroma.$control-border, chroma.$light1);
 
 	&:hover {
-		border-color: $control-border-hover;
-		@include select-arrow-bg($control-border, $light1);
+		border-color: chroma.$control-border-hover;
+		@include select-arrow-bg(chroma.$control-border, chroma.$light1);
 	}
 
 	&:focus {
 		outline: none;
-		border-color: $control-border-focus;
+		border-color: chroma.$control-border-focus;
 	}
 
 	option {
-		background: $dark2;
+		background: chroma.$dark2;
 		line-height: 1.5;
 	}
 }
 
 input[type="button"] {
 	&:hover {
-		border-color: $control-border-hover;
+		border-color: chroma.$control-border-hover;
 	}
 
 	&:focus {
 		outline: none;
-		border-color: $control-border-focus;
+		border-color: chroma.$control-border-focus;
 	}
 }
 
@@ -139,16 +142,16 @@ div.form-placeholder {
 		width: 2ch;
 		margin-right: 1ch;
 		top: +0.2em;
-		border: 1px solid $control-border;
+		border: 1px solid chroma.$control-border;
 		transition: border-color 0.5s;
 	}
 
 	&:hover > input[type="checkbox"] ~ .check-mark {
-		border-color: $light1;
+		border-color: chroma.$light1;
 	}
 
 	& > input[type="checkbox"]:focus ~ .check-mark {
-		border-color: $control-border-focus;
+		border-color: chroma.$control-border-focus;
 	}
 
 	& > input[type="checkbox"]:checked ~ .check-mark:after {
@@ -164,7 +167,7 @@ label.check-group {
 			display: block;
 			position: absolute;
 			content: " ";
-			border: solid $control-mark;
+			border: solid chroma.$control-mark;
 			border-width: 0 1px 1px 0;
 			width: 0.75ch;
 			height: 1.25ch;
@@ -176,8 +179,8 @@ label.check-group {
 	}
 
 	> a {
-		color: $light2;
-		@include thin-underline(1.1em, $light1, $accent1);
+		color: chroma.$light2;
+		@include chroma.thin-underline(1.1em, chroma.$light1, chroma.$accent1);
 	}
 }
 
@@ -192,7 +195,7 @@ label.toggle-group {
 			display: block;
 			position: absolute;
 			content: " ";
-			border: 1px solid $control-border;
+			border: 1px solid chroma.$control-border;
 			width: 0.75ch;
 			height: 0.75ch;
 			border-radius: 100%;
@@ -206,7 +209,7 @@ label.toggle-group {
 	}
 
 	& > input[type="checkbox"]:checked ~ .check-mark:after {
-		border-color: $control-mark;
+		border-color: chroma.$control-mark;
 		visibility: visible;
 		left: calc(2ch + (2ch - 0.75ch) / 2 - 1px);
 	}
@@ -235,7 +238,7 @@ label.toggle-group {
 		border-color 0.25s;
 
 	&.interactive:hover {
-		@include control-hover();
+		@include chroma.control-hover();
 	}
 
 	&.non-interactive {
@@ -247,8 +250,8 @@ label.toggle-group {
 		content: "";
 		border-top: 1px solid transparent;
 		border-right: 1px solid transparent;
-		border-bottom: 1px solid $control-mark;
-		border-left: 1px solid $control-mark;
+		border-bottom: 1px solid chroma.$control-mark;
+		border-left: 1px solid chroma.$control-mark;
 		position: absolute;
 		height: 0.375em;
 		width: 0.75em;
@@ -260,7 +263,7 @@ label.toggle-group {
 	}
 
 	&.checked {
-		border-color: $control-border;
+		border-color: chroma.$control-border;
 
 		&:before {
 			opacity: 1;
@@ -272,6 +275,6 @@ label.toggle-group {
 	}
 	&:focus,
 	&.checked:focus {
-		border-color: $control-border-focus;
+		border-color: chroma.$control-border-focus;
 	}
 }
