--- a/shared/styles-scss/shared/metrics.scss
+++ b/shared/styles-scss/shared/metrics.scss
@@ -1,3 +1,4 @@
+@use "sass:meta";
 @use "sass:math";
 
 $rootFontSize: 20px;
@@ -7,11 +8,11 @@ $sectionPadding: 4rem;
 $sectionHPadding: 2rem;
 
 @function strip-unit($number) {
-	@if type-of($number) == 'number' and not unitless($number) {
-	@return math.div($number, $number * 0 + 1);
+	@if meta.type-of($number) == "number" and not math.is-unitless($number) {
+		@return math.div($number, $number * 0 + 1);
 	}
 	@return $number;
-	}
+}
 
 @function remToPx($x) {
 	@return $rootFontSize * strip-unit($x);
