--- a/shared/styles-scss/shared/sample-code.scss
+++ b/shared/styles-scss/shared/sample-code.scss
@@ -1,4 +1,4 @@
-@import "./chroma.scss";
+@use "chroma.scss";
 .sample-code {
 	&.literature {
 		hyphens: auto;
@@ -7,33 +7,33 @@
 		line-height: 1.5;
 	}
 	.token.dim {
-		color: $dim1;
+		color: chroma.$dim1;
 	}
 	.token.keyword,
 	.token.storage {
-		color: $azure1;
+		color: chroma.$azure1;
 	}
 	.token.keyword-operator {
-		color: $cyan1;
+		color: chroma.$cyan1;
 	}
 	.token.punctuation,
 	.token.comment,
 	.token.meta-brace {
-		color: $dim1;
+		color: chroma.$dim1;
 	}
 	.token.type,
 	.token.support-type,
 	.token.entity {
-		color: $orange1;
+		color: chroma.$orange1;
 	}
 	.token.constant-numeric {
-		color: $red1;
+		color: chroma.$red1;
 	}
 	.token.string {
-		color: $green1;
+		color: chroma.$green1;
 	}
 
 	span.highlight {
-		color: $accent1;
+		color: chroma.$accent1;
 	}
 }
