--- a/shared/styles-scss/shared/sampler-panel.scss
+++ b/shared/styles-scss/shared/sampler-panel.scss
@@ -1,4 +1,4 @@
-@import "./chroma.scss";
+@use "chroma.scss";
 
 @mixin sampler-panel-body() {
 	display: flex;
@@ -8,7 +8,7 @@
 	flex: none;
 	width: $w;
 	margin-right: calc(1rem - 1px);
-	border-right: 1px solid $dark3;
+	border-right: 1px solid chroma.$dark3;
 }
 
 @mixin sampler-panel-right() {
