--- a/shared/styles-scss/shared/section.scss
+++ b/shared/styles-scss/shared/section.scss
@@ -1,16 +1,16 @@
-@import "./chroma.scss";
-@import "./font-cfg.scss";
-@import "./metrics.scss";
+@use "chroma.scss";
+@use "font-cfg.scss";
+@use "metrics.scss";
 
 section {
-	border-bottom: 1px solid $dark3;
+	border-bottom: 1px solid chroma.$dark3;
 	position: relative;
-	padding: $sectionPadding $sectionHPadding;
+	padding: metrics.$sectionPadding metrics.$sectionHPadding;
 	&.with-toolbar {
-		padding-top: $sectionPadding + $toolbarHeight;
+		padding-top: metrics.$sectionPadding + metrics.$toolbarHeight;
 	}
 	.section-inner {
-		width: $sectionWidth;
+		width: metrics.$sectionWidth;
 		margin: 0 auto;
 
 		@media (max-width: 1200px) {
@@ -18,14 +18,14 @@ section {
 		}
 	}
 	.section-toolbar {
-		border-bottom: 1px solid $dark2;
+		border-bottom: 1px solid chroma.$dark2;
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
 		padding: 0;
-		height: $toolbarHeight;
-		line-height: $toolbarHeight;
+		height: metrics.$toolbarHeight;
+		line-height: metrics.$toolbarHeight;
 	}
 
 	h2 {
@@ -35,7 +35,7 @@ section {
 		font-weight: 200;
 		font-stretch: expanded;
 		margin: 0 0 4rem 0;
-		color: $light2;
+		color: chroma.$light2;
 	}
 	.section-introduction {
 		display: flex;
@@ -46,12 +46,12 @@ section {
 			flex: 4;
 			margin: 0;
 			padding-right: 4rem;
-			@include AutoFontSize(36, 3.6rem);
-			@include AutoFontSize(36, 3.2rem);
-			@include AutoFontSize(36, 2.8rem);
-			@include AutoFontSize(36, 2.4rem);
-			@include AutoFontSize(36, 2rem);
-			@include AutoFontSize(36, 1.6rem);
+			@include metrics.AutoFontSize(36, 3.6rem);
+			@include metrics.AutoFontSize(36, 3.2rem);
+			@include metrics.AutoFontSize(36, 2.8rem);
+			@include metrics.AutoFontSize(36, 2.4rem);
+			@include metrics.AutoFontSize(36, 2rem);
+			@include metrics.AutoFontSize(36, 1.6rem);
 		}
 		> .content {
 			font-stretch: expanded;
@@ -59,12 +59,12 @@ section {
 			flex: 6;
 			font-weight: 300;
 			position: relative;
-			@include gradient-text-bg($accent1, $azure1);
+			@include chroma.gradient-text-bg(chroma.$accent1, chroma.$azure1);
 
 			strong,
 			em,
 			cite {
-				@include gradient-text-enable();
+				@include chroma.gradient-text-enable();
 				font-weight: 400;
 				font-style: normal;
 				white-space: nowrap;
@@ -84,15 +84,15 @@ section {
 				top: 1rem;
 				bottom: 1rem;
 				left: -2rem;
-				border-right: 1px solid $dark2;
+				border-right: 1px solid chroma.$dark2;
 			}
 
-			@media (max-width: sectionTotalWidthChars(32, 1rem)) {
+			@media (max-width: metrics.sectionTotalWidthChars(32, 1rem)) {
 				font-size: 0.75em;
 			}
 		}
 
-		@media (max-width: $sectionTotalWidth) {
+		@media (max-width: metrics.$sectionTotalWidth) {
 			display: block;
 			> .header {
 				padding-right: 0;
@@ -107,8 +107,8 @@ section {
 			font-weight: 300;
 			font-size: 2.4rem;
 			margin: 0 0 2rem;
-			@include AutoFontSize(48, 2rem);
-			@include AutoFontSize(48, 1.6rem);
+			@include metrics.AutoFontSize(48, 2rem);
+			@include metrics.AutoFontSize(48, 1.6rem);
 		}
 	}
 }
