--- a/shared/styles-scss/shared/switch-button.scss
+++ b/shared/styles-scss/shared/switch-button.scss
@@ -1,11 +1,11 @@
-@import "./chroma.scss";
+@use "chroma.scss";
 
 @mixin vert-switch-button() {
 	border-right: 2px solid transparent;
 	cursor: pointer;
 	&.active {
-		color: $light4;
-		border-right-color: $cyan1;
+		color: chroma.$light4;
+		border-right-color: chroma.$cyan1;
 		& > .tag {
 			font-weight: 500;
 		}
@@ -14,7 +14,7 @@
 		}
 	}
 	&:hover {
-		background-color: $dark2;
+		background-color: chroma.$dark2;
 	}
 }
 
@@ -36,7 +36,7 @@
 		opacity: 0.625;
 	}
 	&.active {
-		color: $control-mark;
+		color: chroma.$control-mark;
 		& > span.tag {
 			font-weight: 500;
 		}
@@ -45,6 +45,6 @@
 		}
 	}
 	&:hover {
-		@include control-hover();
+		@include chroma.control-hover();
 	}
 }
