--- a/shared/styles-scss/shared/tools-panels-t.scss
+++ b/shared/styles-scss/shared/tools-panels-t.scss
@@ -1,7 +1,11 @@
+@use "sass:color";
+@use "chroma";
+@use "font-cfg";
+
 .tools-panels-t {
 	display: flex;
 	> .panel {
-		border-top: 1px solid change-color($light1, $alpha: 0.25);
+		border-top: 1px solid color.change(chroma.$light1, $alpha: 0.25);
 		> h3 {
 			font-size: 1rem;
 			margin: 1rem 0 0.5rem 0;
@@ -13,10 +17,10 @@
 		width: 6rem;
 		margin-left: 1rem;
 		> .tool-button {
-			@include fc-sans();
+			@include font-cfg.fc-sans();
 			position: relative;
-			background: change-color($light1, $alpha: 0.05);
-			color: $light1;
+			background: color.change(chroma.$light1, $alpha: 0.05);
+			color: chroma.$light1;
 			border: none;
 			border-radius: 0;
 			font-size: 0.75em;
@@ -34,10 +38,10 @@
 				cursor: not-allowed;
 			}
 			&.checked {
-				@include control-active();
+				@include chroma.control-active();
 			}
 			&.unchecked:hover {
-				@include control-hover();
+				@include chroma.control-hover();
 			}
 			&.external::after {
 				display: block;
@@ -50,8 +54,8 @@
 				top: 0.375em;
 				padding: 0.2em 0.2em 0 0;
 				line-height: 1;
-				border-top: 1px solid $light1;
-				border-right: 1px solid $light1;
+				border-top: 1px solid chroma.$light1;
+				border-right: 1px solid chroma.$light1;
 			}
 		}
 	}
