--- a/shared/styles-scss/page-parts/code-sampler.scss
+++ b/shared/styles-scss/page-parts/code-sampler.scss
@@ -1,19 +1,19 @@
-@import "../shared/chroma.scss";
-@import "../shared/switch-button.scss";
-@import "../shared/sampler-panel.scss";
+@use "../shared/chroma.scss";
+@use "../shared/switch-button.scss";
+@use "../shared/sampler-panel.scss";
 .code-sampler-body {
-	@include sampler-panel-body();
+	@include sampler-panel.sampler-panel-body();
 	> .picker {
-		@include sampler-panel-left(8rem);
+		@include sampler-panel.sampler-panel-left(8rem);
 		> .option {
 			display: block;
 			font-size: 0.8rem;
 			line-height: 1.5rem;
 			padding-right: 0.5rem;
-			@include vert-switch-button();
+			@include switch-button.vert-switch-button();
 		}
 	}
 	> .picker-frame {
-		@include sampler-panel-right();
+		@include sampler-panel.sampler-panel-right();
 	}
 }
