--- a/shared/styles-scss/shared/character-variant-picker.scss
+++ b/shared/styles-scss/shared/character-variant-picker.scss
@@ -1,7 +1,8 @@
-@import "./chroma.scss";
-@import "./switch-button.scss";
-@import "./sampler-panel.scss";
-@import "./metrics.scss";
+@use "sass:color";
+@use "chroma.scss";
+@use "switch-button.scss";
+@use "sampler-panel.scss";
+@use "metrics.scss";
 
 $smallOptionSize: 1.75rem;
 $largeOptionSize: 3.125rem;
@@ -31,7 +32,7 @@ $largeOptionSize: 3.125rem;
 		}
 	}
 	> .option.header {
-		border: 1px solid $dark1;
+		border: 1px solid chroma.$dark1;
 		display: block;
 		width: 100%;
 		box-sizing: border-box;
@@ -55,7 +56,7 @@ $largeOptionSize: 3.125rem;
 		&.non-default > .upright-sample,
 		&.non-default > .italic-sample {
 			font-weight: 600;
-			color: $accent1;
+			color: chroma.$accent1;
 		}
 	}
 	> .options {
@@ -64,8 +65,8 @@ $largeOptionSize: 3.125rem;
 		margin-top: -1px;
 		left: 0;
 		z-index: 3;
-		background: $dark1;
-		border: 1px solid $dark1;
+		background: chroma.$dark1;
+		border: 1px solid chroma.$dark1;
 		overflow: hidden;
 		flex-wrap: wrap;
 		> .group {
@@ -79,12 +80,12 @@ $largeOptionSize: 3.125rem;
 	&.dropdown-visible {
 		> .option.header {
 			z-index: 4;
-			border-left-color: change-color($light1, $alpha: 0.5);
-			border-top-color: change-color($light1, $alpha: 0.5);
-			border-right-color: change-color($light1, $alpha: 0.5);
+			border-left-color: color.change(chroma.$light1, $alpha: 0.5);
+			border-top-color: color.change(chroma.$light1, $alpha: 0.5);
+			border-right-color: color.change(chroma.$light1, $alpha: 0.5);
 		}
 		> .options {
-			border-color: change-color($light1, $alpha: 0.5);
+			border-color: color.change(chroma.$light1, $alpha: 0.5);
 		}
 	}
 	.option {
@@ -96,17 +97,17 @@ $largeOptionSize: 3.125rem;
 		text-align: center;
 		font-weight: 300;
 		&.inactive {
-			color: change-color($light1, $alpha: 0.75);
+			color: color.change(chroma.$light1, $alpha: 0.75);
 		}
 		&.active {
-			color: $light4;
+			color: chroma.$light4;
 			font-weight: 600;
 			&.non-default {
-				color: $accent1;
+				color: chroma.$accent1;
 			}
 		}
 		&:hover {
-			@include control-hover();
+			@include chroma.control-hover();
 		}
 		> .italic-sample {
 			font-style: italic;
