--- a/shared/styles-scss/shared/picker-frame.scss
+++ b/shared/styles-scss/shared/picker-frame.scss
@@ -1,19 +1,20 @@
-@import "./chroma.scss";
+@use "sass:color";
+@use "chroma.scss";
 
 @mixin picker-button-visual() {
 	cursor: pointer;
 	border-bottom: 2px solid transparent;
 	&:hover {
-		border-bottom-color: change-color($light1, $alpha: 0.25);
+		border-bottom-color: color.change(chroma.$light1, $alpha: 0.25);
 	}
 	&.active {
-		border-bottom-color: $cyan1;
-		color: $light4;
+		border-bottom-color: chroma.$cyan1;
+		color: chroma.$light4;
 		font-weight: bolder;
 	}
 	&.disabled {
 		cursor: not-allowed;
-		color: change-color($light1, $alpha: 0.25);
+		color: color.change(chroma.$light1, $alpha: 0.25);
 	}
 	&.disabled:hover,
 	&.disabled.active {
@@ -42,7 +43,7 @@
 			flex: none;
 			> .picker-button-label {
 				font-size: 0.8rem;
-				color: $light2;
+				color: chroma.$light2;
 				display: none;
 			}
 			> .picker-button {
@@ -56,7 +57,7 @@
 			}
 		}
 		> .button-group + .button-group {
-			border-left: 1px solid $dark2;
+			border-left: 1px solid chroma.$dark2;
 		}
 		.picker-button {
 			@include picker-button-visual();
