--- a/shared/styles-scss/shared/scroll-bar.scss
+++ b/shared/styles-scss/shared/scroll-bar.scss
@@ -1,25 +1,26 @@
-@import "./chroma.scss";
+@use "sass:color";
+@use "chroma.scss";
 
 ::-webkit-scrollbar {
 	width: 12px;
 }
 
 ::-webkit-scrollbar-track {
-	background: $dark2;
+	background: chroma.$dark2;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: change-color($light1, $alpha: 0.25);
+	background-color: color.change(chroma.$light1, $alpha: 0.25);
 	border-radius: 20px;
-	border: 3px solid $dark2;
+	border: 3px solid chroma.$dark2;
 
 	&:hover {
-		background-color: change-color($light1, $alpha: 0.375);
+		background-color: color.change(chroma.$light1, $alpha: 0.375);
 		border-width: 2px;
 	}
 }
 
 * {
 	scrollbar-width: thin;
-	scrollbar-color: change-color($light1, $alpha: 0.25) $dark2;
+	scrollbar-color: color.change(chroma.$light1, $alpha: 0.25) chroma.$dark2;
 }
